yaml-examples/jupyter/jupyter-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jupyter
  namespace: default
  labels:
    app: jupyter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jupyter
  template:
    metadata:
      labels:
        app: jupyter
    spec:

      containers:
      - name: jupyter
        image: jupyter/scipy-notebook
        imagePullPolicy: Always
        ports:
          - containerPort: 8888
        volumeMounts:
          - mountPath: /datasets
            name: datasets
      volumes:
      - name: datasets
        hostPath:
          path: /mnt/share/Datasets
