yaml-examples/jupyter/jupyter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyter
  namespace: default
spec:
  selector:
    app: jupyter
  ports:
  - port: 8888
    targetPort: 8888
